tests/baselines/reference/lambdaPropSelf(strict=true).errors.txt
lambdaPropSelf.ts(21,13): error TS2331: 'this' cannot be referenced in a module or namespace body.
lambdaPropSelf.ts(21,13): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.


==== lambdaPropSelf.ts (2 errors) ====
    declare var ko: any;
    
    class Person {
        children: string[];
    
        constructor (public name: string, children: string[]) {
            this.children = ko.observableArray(children);
        }
    
        addChild = () => this.children.push("New child");
    }
    
    
    class T {
         fo() {
            var x = this;
        }
    }
    
    module M {
        var x = this;
                ~~~~
!!! error TS2331: 'this' cannot be referenced in a module or namespace body.
                ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
    }
    